[FIX] circle status icon alignment

--- a/src/app/common/status-circle/status-circle.component.scss
+++ b/src/app/common/status-circle/status-circle.component.scss
@@ -8,4 +8,6 @@
 
 mat-icon {
 	font-size: 16px;
+	padding-top: 9px;
+	padding-left: 8px;
 }
